@@ -82,11 +82,11 @@ public class TABReturnOrder extends javax.swing.JPanel {
     }
 
     private void fillTableModal() {
-        String[] headers = {"Mã hàng", "Tên hàng", "Đơn vị tính", "Số lượng", "Giá trả hàng","Lý do trả", "Thao tác"};
-        List<Integer> tableWidths = Arrays.asList(100, 200, 100 , 70, 140,200, 130);
-        tableDesignView = new TableDesign(headers, tableWidths, List.of(false, false,false, false,false , false, true));
+        String[] headers = {"Mã hàng", "Tên hàng", "Đơn vị tính", "Số lượng", "Giá trả hàng","Lý do trả", "Lý do xử lý" ,"Thao tác"};
+        List<Integer> tableWidths = Arrays.asList(85, 200, 70 , 70, 140,200,200, 130);
+        tableDesignView = new TableDesign(headers, tableWidths, List.of(false, false,false, false, false,false , true, true));
         scrollTableView.setViewportView(tableDesignView.getTable());
-        scrollTableView.setBorder(BorderFactory.createEmptyBorder(15, 20, 20, 20));
+        scrollTableView.setBorder(BorderFactory.createEmptyBorder(15, 10, 20, 10));
         tableDesignView.setTableHeaderFontSize(14);
     }
 
@@ -104,6 +104,7 @@ public class TABReturnOrder extends javax.swing.JPanel {
                         returnOrderDetail.getQuantity(),
                         FormatNumber.formatToVND(returnOrderDetail.getLineTotal()),
                         returnOrderDetail.getReason(),
+                        returnOrderDetail.getFinalReason(),
                         null
                 });
             } else if ( returnOrderDetail.getReturnOrderDetailStatus().equals(ReturnOrderDetailStatus.RETURNED)){
@@ -114,6 +115,7 @@ public class TABReturnOrder extends javax.swing.JPanel {
                         returnOrderDetail.getQuantity(),
                         FormatNumber.formatToVND(returnOrderDetail.getLineTotal()),
                         returnOrderDetail.getReason(),
+                        returnOrderDetail.getFinalReason(),
                         "Đã Thêm Lại"
                 });
             }
@@ -125,6 +127,7 @@ public class TABReturnOrder extends javax.swing.JPanel {
                         returnOrderDetail.getQuantity(),
                         FormatNumber.formatToVND(returnOrderDetail.getLineTotal()),
                         returnOrderDetail.getReason(),
+                        returnOrderDetail.getFinalReason(),
                         "Đã Xuất Hủy"
                 });
             }
@@ -143,6 +146,7 @@ public class TABReturnOrder extends javax.swing.JPanel {
                 if ( MessageDialog.confirm(null, "Bạn muốn thêm lại sản phẩm " + productName + " vào hệ thống", "Xác nhận") ){
                     ReturnOrderDetail returnOrderDetail = returnOrderDetailBUS.findByReturnOrderIdAndProductId(returnOrderId,productId);
                     returnOrderDetail.setReturnOrderDetailStatus(ReturnOrderDetailStatus.RETURNED);
+                    returnOrderDetail.setFinalReason((String) table.getValueAt(row,6));
                     if ( returnOrderDetailBUS.updateReturnOrderDetailToReturn(returnOrderDetail) ){
                         MessageDialog.info(null, "Sản phẩm đã thêm lại hệ thống.");
                         fillModal(returnOrderBUS.findById(txtReturnOrderId.getText().trim()));
@@ -162,7 +166,8 @@ public class TABReturnOrder extends javax.swing.JPanel {
                 String productName = (String) table.getValueAt(row,1);
                 if ( MessageDialog.confirm(null, "Bạn muốn loại bỏ sản phẩm " + productName, "Xác nhận") ){
                     ReturnOrderDetail returnOrderDetail = returnOrderDetailBUS.findByReturnOrderIdAndProductId(returnOrderId,productId);
-                    returnOrderDetail.setReturnOrderDetailStatus(ReturnOrderDetailStatus.DAMAGED);
+                    returnOrderDetail.setReturnOrderDetailStatus(ReturnOrderDetailStatus.PENDING_DAMAGED);
+                    returnOrderDetail.setFinalReason((String) table.getValueAt(row,6));
                     if ( returnOrderDetailBUS.updateReturnOrderDetailToDamage(returnOrderDetail) ){
                         MessageDialog.info(null, "Sản phẩm loại bỏ.");
                         fillModal(returnOrderBUS.findById(txtReturnOrderId.getText().trim()));
@@ -178,7 +183,6 @@ public class TABReturnOrder extends javax.swing.JPanel {
 //            Object value = table.getValueAt(row, table.getColumnCount() - 1);
                 table.getColumnModel().getColumn(table.getColumnCount() - 1).setCellRenderer(new TableActionCellRenderReturnManage());
                 table.getColumnModel().getColumn(table.getColumnCount() - 1).setCellEditor(new TableActionCellEditorReturnManage(event));
-
         }
         table.revalidate();
         table.repaint();
@@ -514,8 +518,8 @@ public class TABReturnOrder extends javax.swing.JPanel {
         headerPanel.setLayout(new java.awt.BorderLayout());
 
         jPanel5.setBackground(new java.awt.Color(255, 255, 255));
-        jPanel5.setMinimumSize(new java.awt.Dimension(0, 170));
-        jPanel5.setPreferredSize(new java.awt.Dimension(1190, 170));
+        jPanel5.setMinimumSize(new java.awt.Dimension(0, 130));
+        jPanel5.setPreferredSize(new java.awt.Dimension(1190, 130));
 
         btnSearch.setBackground(new java.awt.Color(115, 165, 71));
         btnSearch.setFont(new java.awt.Font("Segoe UI", 0, 16)); // NOI18N
@@ -594,50 +598,52 @@ public class TABReturnOrder extends javax.swing.JPanel {
         jPanel5Layout.setHorizontalGroup(
             jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jPanel5Layout.createSequentialGroup()
-                .addGap(56, 56, 56)
+                .addContainerGap()
                 .addComponent(btnView, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addGap(65, 65, 65)
+                .addGap(115, 115, 115)
                 .addGroup(jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                     .addComponent(jDateFrom, javax.swing.GroupLayout.PREFERRED_SIZE, 210, javax.swing.GroupLayout.PREFERRED_SIZE)
                     .addComponent(txtOrderIdSearch, javax.swing.GroupLayout.PREFERRED_SIZE, 210, javax.swing.GroupLayout.PREFERRED_SIZE))
-                .addGap(18, 18, 18)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addGroup(jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                     .addComponent(txtEmpName, javax.swing.GroupLayout.PREFERRED_SIZE, 210, javax.swing.GroupLayout.PREFERRED_SIZE)
                     .addGroup(jPanel5Layout.createSequentialGroup()
                         .addComponent(jLabel2)
-                        .addGap(18, 18, 18)
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                         .addComponent(jDateTo, javax.swing.GroupLayout.PREFERRED_SIZE, 210, javax.swing.GroupLayout.PREFERRED_SIZE)))
                 .addGap(18, 18, 18)
                 .addComponent(optionStatus, javax.swing.GroupLayout.PREFERRED_SIZE, 210, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addGap(18, 18, 18)
                 .addComponent(btnSearch, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 249, Short.MAX_VALUE)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 244, Short.MAX_VALUE)
                 .addComponent(txtOrder, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addGap(22, 22, 22))
         );
         jPanel5Layout.setVerticalGroup(
             jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jPanel5Layout.createSequentialGroup()
-                .addGroup(jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
-                    .addComponent(btnView, javax.swing.GroupLayout.PREFERRED_SIZE, 102, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addGroup(javax.swing.GroupLayout.Alignment.LEADING, jPanel5Layout.createSequentialGroup()
+                .addGroup(jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                    .addGroup(jPanel5Layout.createSequentialGroup()
                         .addGroup(jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                             .addGroup(jPanel5Layout.createSequentialGroup()
-                                .addGap(29, 29, 29)
+                                .addGap(14, 14, 14)
                                 .addGroup(jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                                     .addComponent(jDateTo, javax.swing.GroupLayout.PREFERRED_SIZE, 40, javax.swing.GroupLayout.PREFERRED_SIZE)
                                     .addComponent(jDateFrom, javax.swing.GroupLayout.PREFERRED_SIZE, 40, javax.swing.GroupLayout.PREFERRED_SIZE)))
                             .addGroup(jPanel5Layout.createSequentialGroup()
-                                .addGap(39, 39, 39)
+                                .addGap(24, 24, 24)
                                 .addComponent(jLabel2, javax.swing.GroupLayout.PREFERRED_SIZE, 18, javax.swing.GroupLayout.PREFERRED_SIZE)))
-                        .addGap(21, 21, 21)
+                        .addGap(15, 15, 15)
                         .addGroup(jPanel5Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                             .addComponent(txtOrderIdSearch, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                             .addComponent(optionStatus, javax.swing.GroupLayout.PREFERRED_SIZE, 40, javax.swing.GroupLayout.PREFERRED_SIZE)
                             .addComponent(txtEmpName, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
                             .addComponent(btnSearch, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                            .addComponent(txtOrder, javax.swing.GroupLayout.PREFERRED_SIZE, 41, javax.swing.GroupLayout.PREFERRED_SIZE))))
-                .addGap(39, 39, 39))
+                            .addComponent(txtOrder, javax.swing.GroupLayout.PREFERRED_SIZE, 41, javax.swing.GroupLayout.PREFERRED_SIZE)))
+                    .addGroup(jPanel5Layout.createSequentialGroup()
+                        .addGap(14, 14, 14)
+                        .addComponent(btnView, javax.swing.GroupLayout.PREFERRED_SIZE, 102, javax.swing.GroupLayout.PREFERRED_SIZE)))
+                .addGap(14, 14, 14))
         );
 
         headerPanel.add(jPanel5, java.awt.BorderLayout.CENTER);
